# t2h

./: README.txt  bootstrap.bat  bootstrap.sh  release note.txt
doc/: interface.html
src/: CMakeLists.txt
src/apps/: .http_server.cpp.swp  CMakeLists.txt  full_model.cpp  http_server.cpp
src/cmake_extra/: OpenSSLConfig.cmake  platform_config.cmake  subroutines.cmake  version.cmake
src/cmake_extra/osx/: envt_config.cmake  generic_config.cmake  lib_dir.cmake  platform_config.cmake
src/cmake_extra/win/: compiler_flags_init.cmake  config.cmake  platform_config.cmake
src/cmake_extra/windows/: envt_config.cmake  generic_config.cmake
src/common/: CMakeLists.txt  base_service.cpp  base_service.hpp  services_manager.cpp  services_manager.hpp
src/common/event_queue/: CMakeLists.txt  event_wrapper.hpp
src/common/http_utility/: CMakeLists.txt  http_header.hpp  http_reply.cpp  http_reply.hpp  http_reply_resources.hpp  http_request.cpp  http_request.hpp  http_request_parser.cpp  http_request_parser.hpp  http_utility.cpp  http_utility.hpp  mime_types.cpp  mime_types.hpp
src/common/network/: .CMakeLists.txt.swp  .http_server_faces.hpp.swp  CMakeLists.txt  asio_socket_transport.cpp  asio_socket_transport.hpp  base_transport.cpp  base_transport.hpp  base_transport_ev_handler.cpp  base_transport_ev_handler.hpp  base_transport_ostream.hpp  connection.cpp  connection.hpp  transport_context.hpp  transport_types.hpp
src/common/network/details/: http_mongoose_socket_ostream.cpp  http_mongoose_socket_ostream.hpp  http_mongoose_transport.cpp  http_mongoose_transport.hpp  http_transport_context.hpp  mongoose.c
src/common/notification_model/: CMakeLists.txt  base_notification.hpp  notification_center.cpp  notification_center.hpp  notification_receiver.hpp  notification_unit.cpp  notification_unit.hpp
src/common/syslogger/: CMakeLists.txt  abstract_syslogger.cpp  abstract_syslogger.hpp  lc_trace.hpp  syslogger.hpp
src/common/syslogger/impl/osx/: .syslogger_impl.cpp.swp  .syslogger_impl.hpp.swp  syslogger_impl.cpp  syslogger_impl.hpp
src/common/syslogger/impl/stub/: syslogger_impl.hpp
src/common/syslogger/impl/win/: syslogger_impl.cpp
src/common/syslogger/impl/windows/: syslogger_impl.cpp  syslogger_impl.hpp
src/common/utility/: CMakeLists.txt  basic_events.hpp  basic_safe_container.hpp  common_utility.hpp  events.hpp  events_policy.hpp  factory.hpp  misc_utility.cpp  misc_utility.hpp  thread_pool.hpp
src/core/: CMakeLists.txt
src/core/common/: CMakeLists.txt  core_event_types.hpp  core_file_change_notification.hpp  core_notification_center.cpp  core_notification_center.hpp  core_version.hpp_tmpl  setting_manager.cpp  setting_manager.hpp
src/core/external_api/: CMakeLists.txt  external_api.cpp  external_api_details.cpp  external_api_details.hpp  handles_manager.hpp  hc_event_source_adapter.cpp  hc_event_source_adapter.hpp  t2h.h  t2h_config.h  t2h_export.def
src/core/http_server/: CMakeLists.txt  hcore_notification_recv.cpp  hcore_notification_recv.hpp  http_core_reply.hpp  http_file_info_buffer.cpp  http_file_info_buffer.hpp  http_server_core.cpp  http_server_core.hpp  http_server_core_config.hpp  http_server_macroses.hpp  http_server_ostream_policy.cpp  http_server_ostream_policy.hpp  http_transport_ev_handler.cpp  http_transport_ev_handler.hpp
src/core/http_server/details/: async_file_info_subscriber.hpp  base_chunked_ostream.hpp  file_info_buffer.cpp  file_info_buffer.hpp  file_info_buffer_realtime_updater.cpp  file_info_buffer_realtime_updater.hpp  hs_chunked_ostream_impl.cpp  hs_chunked_ostream_impl.hpp  http_server_utility.hpp
src/core/http_server/details/replies/: head_reply.cpp  head_reply.hpp  partial_content_reply.cpp  partial_content_reply.hpp  replies_types.hpp  send_content_reply.cpp  send_content_reply.hpp
src/core/http_server/replies/: head_reply.cpp  head_reply.hpp  partial_content_reply.cpp  partial_content_reply.hpp  replies_types.hpp  root_reply.cpp  root_reply.hpp  send_content_reply.cpp  send_content_reply.hpp
src/core/t2h_c_api/: .torrent2http.cpp.swp  CMakeLists.txt  t2h.cpp  t2h.h  t2h_details.cpp  t2h_details.hpp  torrent2http.cpp
src/core/t2h_http_server/: CMakeLists.txt  t2h_http_server_cntl.cpp  t2h_http_server_cntl.hpp  t2h_settings_manager.cpp  t2h_settings_manager.hpp  t2h_transport_ev_handler.cpp  t2h_transport_ev_handler.hpp
src/core/t2h_torrent_client/: CMakeLists.txt
src/core/t2h_torrent_core/: CMakeLists.txt  base_torrent_core_cntl.hpp  serial_download_tcore_cntl.cpp  serial_download_tcore_cntl.hpp  t2h_torrent_core.cpp  t2h_torrent_core.hpp  t2h_torrent_core_config.hpp
src/core/torrent_core/: CMakeLists.txt  base_torrent_core_cntl.hpp  sequential_torrent_controller.cpp  sequential_torrent_controller.hpp  serial_download_tcore_cntl.cpp  serial_download_tcore_cntl.hpp  torrent_core.cpp  torrent_core.hpp  torrent_core_config.hpp  torrent_core_event_handler.hpp  torrent_core_future.cpp  torrent_core_future.hpp  torrent_core_macros.hpp  torrent_info.cpp  torrent_info.hpp
src/core/torrent_core/details/: base_resolver.hpp  error_resolvers_types.cpp  error_resolvers_types.hpp  lookup_error.cpp  lookup_error.hpp  resolvers_factory.cpp  resolvers_factory.hpp  shared_buffer.cpp  shared_buffer.hpp  torrent_core_utility.cpp  torrent_core_utility.hpp
src/scripts/tools/: envt-inc  full_model.bat  full_model.sh  git_loc
src/tests/: CMakeLists.txt
src/tests/common_tests/: .CMakeLists.txt.swp  .api_test.c.swp  CMakeLists.txt  http_header_parser_test.cpp  http_reply_test.cpp  http_request_parser_test.cpp  notification_center_test.cpp  syslog_test.cpp
src/tests/core_tests/: CMakeLists.txt  external_type_test.cpp  hc_replies_test.cpp  http_server.cpp  link_test.c  link_test.cpp  setting_manager_test.cpp  tor_test.cpp  torrent_core_test.cpp
src/tests/core_tests/scripts/: .send_get_request.py.swn  .send_get_request.py.swo  .send_get_request.py.swp  send_get_request.py  setting_manager_config.json  sreq.py
toolchains/: MacOS.Universal.cmake
